--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.82.0",
     "axios": "^1.10.0",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
     "next": "^15.3.4",
     "react": "^19.1.0",
@@ -30,6 +31,8 @@
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "^10.1.5",
     "prettier": "^3.5.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1"
   }
 }
